Bug 105686 - FILTER: STYLE function is imported wrongly when is part of named formula (ods)
Summary: FILTER: STYLE function is imported wrongly when is part of named formula (ods)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Mohammed Abdul Azeem
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: FastParser-regressions
  Show dependency treegraph
 
Reported: 2017-02-02 02:03 UTC by m_a_riosv
Modified: 2022-09-30 12:22 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File with the Style function as part of named formula. (26.29 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-02-02 02:04 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2017-02-02 02:03:48 UTC
Description:
STYLE function is imported wrongly when is part of named formula (ods)

Steps to Reproduce:
1.Open attached file
2.Named formula is broken, style function not properly imported.
3.

Actual Results:  
.

Expected Results:
.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:51.0) Gecko/20100101 Firefox/51.0
Comment 1 m_a_riosv 2017-02-02 02:04:57 UTC
Created attachment 130822 [details]
File with the Style function as part of named formula.
Comment 2 Xisco Faulí 2017-02-02 18:26:29 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: fc53cce64400430cdc21f79c959d75fb9a26d13d
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 5.4.0.0.alpha0+
Build ID: ae604ccce58f414fb2a0446bb4f94553929c72e4
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2017-01-02_23:32:56
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 Aron Budea 2017-02-17 00:45:14 UTC Comment hidden (bibisection)
Comment 4 Aron Budea 2017-02-17 00:46:49 UTC
The issue started with the commit referenced below. Adding Cc: to Mohammed Abdul Azeem, author and Michael Meeks, committer. Please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8154953add163554c00935486a1cf5677cef2609
author		Mohammed Abdul Azeem <azeemmysore@gmail.com>	2016-09-05 09:08:30 (GMT)
committer	Michael Meeks <michael.meeks@collabora.com>	2017-01-25 11:20:48 (GMT)

"ScXMLTableRowCellContext implements fast interfaces:"
Comment 5 Commit Notification 2017-03-21 11:36:48 UTC
Mohammed Abdul Azeem committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a0f205775807d63e7f6dd910de368bb12b11a49

tdf#105686 - fixed wrongly imported named expressions:

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 m_a_riosv 2017-03-22 16:19:59 UTC
Thanks @Mohammed.

Please resolved as fixed to mark as verified.

Verified.
Version: 5.4.0.0.alpha0+
Build ID: bdf41d8aeb53a298780f3633a76d71598a695bab
CPU threads: 4; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-03-22_01:32:59
Locale: es-ES (es_ES); Calc: CL