tdf#105686 - fixed wrongly imported named expressions:

It is necessary to extract and set ODF version for fast
events also.
I found a couple of tokens which were not in the list,
and added them (not needed for bug fix).

Change-Id: I7aaab99688a067ee2fd2c9814deec1a359a758ab